<resources>
    <string name="app_name">Sink Em All!</string>
    <string name="thinking_text">COM is thinking...</string>
    <string name="click_to_start">Click To Start</string>
    <string name="new_game_string">START NEW GAME</string>
    <string name="resume_game_string">RESUME GAME</string>
    <string name="hall_of_fame_string">HALL OF FAME</string>
    <string name="menu_choose_action">CHOOSE!!!</string>
    <string name="first_in_ranking"><u>first in ranking</u></string>
    <string name="align_button_text">ROTATE</string>
    <string name="start_game_button_text">START GAME</string>
    <string name="set_your_ships">SET YOUR SHIPS</string>
    <string name="cant_step_another">Some ships are overlapping</string>
    <string name="swipe_right">THIS IS YOUR PANEL\nSWIPE RIGHT TO ATTACK</string>
    <string name="start_game_textview">GAME START!!!</string>
    <string name="your_turn">CHOOSE A SQUARE TO ATTACK!!! \n IT\'S YOUR TURN!</string>
    <string name="coms_turn">WAIT UNTIL CPU ATTACKS\nMACHINE IS THINKING...</string>
    <string name="missed_text">YOU MISSED!!!</string>
    <string name="hit_text">BANG!!!!!!!!!</string>
    <string name="press_to_continue_text">Click to continue</string>
    <string name="sunk_text">SANK!!!</string>
    <string name="about_menu_string">About</string>
    <string name="click">CLICK</string>
    <string name="disable_audio_string">Disable Audio</string>
    <string name="disable_video_string">Disable Video</string>
    <string name="about_description">THIS GAME WAS EXCLUSIVELY CREATED AS ENTERTAINMENT AND A PROGRAMMING EXERCISE BY ME, JUAN CARLOS ITURRIAGAGOITIA.\nIM NOT RESPONSIBLE FOR ANY TROUBLE THIS APP MIGHT CAUSE TO YOUR DEVICE THOUGHT I NEVER EXPERIENCED ANY AND IT\'S AS TESTED AS POSSIBLE.\n
        THIS APP IS OPTIMIZED FOR MY PHONE, HUAWEI MATE 10 PRO(trade mark) THEREFORE I CAN\'T GUARANTEE EVERYTHING WILL BE DISPLAYED PERFECTLY IF YOUR DEVICE IS NOT THE SAME.\n
        \nHOPE YOU ENJOY IT!. \n\n\nALL OF THE PICTURES WERE TAKEN FROM THE INTERNET AS MOST OF THE MUSIC AND ANIMATIONS.\n
        \n\n\n\n\nCLICK TO CLOSE.
        </string>
    <string name="you_win_text">YOU WIN!</string>
    <string name="you_lose_text">YOU LOSE!</string>
    <string name="click_to_exit">CLICK TO CLOSE ANIMATION</string>
    <string name="null_text"> </string>
    <string name="click_to_finish_anim">GAME OVER\nCLICK AFTER ANIMATION FINISHES</string>
    <string name="click_to_finish">GAME OVER \nCLICK TO FINISH GAME</string>
    <string name="enter_record_button">ENTER RECORD</string>
    <string name="your_position_is_text">YOUR POSITION IS: </string>
    <string name="machine_sunk_text">COM has sunk a ship of yours</string>
    <string name="machine_missed_text">COM misses its attack</string>
    <string name="preferences_self_attack">selfPreferences</string>
    <string name="preferences_com_attack">comPreferences</string>
</resources>
