<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout -->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_width="match_parent"-->
              <!--android:orientation="vertical">-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/about_button_final"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColorLink="@color/red"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:textColor="@color/red"
        android:text="@string/about_description"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/relative_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:elevation="8dp">


        <Button
            android:id="@+id/new_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/round"
            android:text="@string/new_game_string"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:layout_marginTop="22dp"/>

    <Button
        android:id="@+id/resume_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@drawable/round"
        android:text="@string/resume_game_string"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="40dp"/>

    <Button
        android:id="@+id/hall_of_fame_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round"
        android:text="@string/hall_of_fame_string"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="40dp"/>
    </RelativeLayout>
</LinearLayout>
<!--</LinearLayout>-->