<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/record_writing_background">

    <TextView
        android:id="@+id/about_record_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:text="@string/about_description"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/record_hit_to_finish"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/click"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textAlignment="center"
        android:gravity="center"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3">
        <TextView
            android:id="@+id/title_record_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="top"
            android:text="@string/your_position_is_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:enabled="false"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/first_record_letter"
            android:background="@drawable/my_letters_frame"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:text="A"
            android:enabled="false"
            android:textAlignment="center"
            android:textSize="50sp" />
        <TextView
            android:id="@+id/second_record_letter"
            android:background="@drawable/my_letters_frame"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/red"
            android:layout_weight="0.3"
            android:text="A"
            android:enabled="false"
            android:textAlignment="center"
            android:textSize="50sp" />
        <TextView
            android:id="@+id/third_record_letter"
            android:background="@drawable/my_letters_frame"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:text="A"
            android:enabled="false"
            android:textAlignment="center"
            android:textSize="50sp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/arrow_up_one"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="left"
            android:layout_marginStart="41dp"
            android:alpha="0.5"
            android:background="@mipmap/arrow_up_record" />

        <ImageView
            android:id="@+id/arrow_up_two"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="top"
            android:alpha="0.5"
            android:background="@mipmap/arrow_up_record"/>

        <ImageView
            android:id="@+id/arrow_up_three"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/arrow_down_three"
            android:layout_gravity="right"
            android:alpha="0.5"
            android:background="@mipmap/arrow_up_record" />

        <ImageView
            android:id="@+id/arrow_down_one"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/arrow_up_one"
            android:layout_below="@+id/arrow_up_one"
            android:layout_gravity="left"
            android:alpha="0.5"
            android:background="@mipmap/arrow_down_icon" />

        <ImageView
            android:id="@+id/arrow_down_two"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/arrow_up_two"
            android:layout_below="@+id/arrow_up_two"
            android:layout_gravity="top"
            android:alpha="0.5"
            android:background="@mipmap/arrow_down_icon" />

        <ImageView
            android:id="@+id/arrow_down_three"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/arrow_up_three"
            android:layout_gravity="right"
            android:layout_marginEnd="41dp"
            android:alpha="0.5"
            android:background="@mipmap/arrow_down_icon" />

        <Button
            android:id="@+id/intro_record_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/arrow_up_one"
            android:layout_marginTop="66dp"
            android:layout_weight="0.3"
            android:text="@string/enter_record_button"
            android:textColor="@color/black" />
    </RelativeLayout>

</LinearLayout>