<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/canon">

    <TextView
        android:id="@+id/about_button_final_self"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColorLink="@color/red"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:textColor="@color/red"
        android:text="@string/about_description"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/linear_to_change_about_self"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/text_view_animation"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/start_game_textview"/>
        <GridLayout
                    android:id="@+id/frame_final_self_board"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:rowCount="8"
                    android:columnCount="8"
                    android:layout_gravity="center"
                    android:paddingStart="9dp"
                    android:padding="0dp"
            android:visibility="gone">
            <Button
                android:id="@+id/button1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:padding="0dp"/>
            <Button
                android:id="@+id/button2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button3"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button4"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button5"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button6"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button8"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button9"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button10"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button11"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button12"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button13"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button14"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button15"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button16"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button17"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button18"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button19"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button20"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button21"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button22"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button23"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button24"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button25"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button26"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button27"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button28"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button29"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button30"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button31"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button32"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button33"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button34"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button35"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button36"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button37"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button38"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button39"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button40"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button41"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button42"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="0dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button43"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button44"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button45"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button46"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button47"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button48"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button49"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button50"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button51"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button52"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button53"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button54"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button55"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button56"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button57"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button58"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button59"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button60"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button61"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button62"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button63"
                android:layout_width="50dp"
                android:padding="0dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button64"
                android:padding="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/black"/>
        </GridLayout>

        <LinearLayout
            android:id="@+id/finale_self_board_linearlayout"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
            android:visibility="gone">
             <TextView
                 android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:textSize="30dp"
                  android:textAlignment="center"
                 android:text="@string/swipe_right"
                  android:textColor="@color/red"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

